tests/invalid/cpp_name_export_invalid_symbol.wio
@Export
@CppName("bad-symbol")
fn WriteValue() -> i32 {
    return 0;
}
